Passage en java11